--- a/main.pug
+++ b/main.pug
@@ -10,25 +10,25 @@ block div
       li(data-target="#mainCarousel" data-slide-to="2")
     .carousel-inner 
       a.carousel-item.active(href="../intro.html")
-        img(src="../images/cardButton1.jpeg" alt="")
+        img(src="./images/cardButton1.png" alt="")
         .carousel-caption
-          h2 LacalS
+          h2 LaCalS
           p 
             | 아이가 주도하는
             br 
             | 진짜 놀이공간
       a.carousel-item(href="../intro.html")
-        img(src="../images/cardButton2.jpeg" alt="")
+        img(src="./images/cardButton2.png" alt="")
         .carousel-caption
-          h2 LacalS
+          h2 LaCalS
           p 
             | 아이가 주도하는
             br 
             | 진짜 놀이공간
       a.carousel-item(href="../intro.html")
-        img(src="../images/cardButton3.jpeg" alt="")
+        img(src="./images/cardButton3.png" alt="")
         .carousel-caption
-          h2 LacalS
+          h2 LaCalS
           p 
             | 아이가 주도하는
             br 
