--- a/intro.pug
+++ b/intro.pug
@@ -1,79 +1,40 @@
-//-http://www.freelybebe.com/main
-  https://www.lespace.co.kr/ 
-  LaCalS 글자가 로고고 위로 올라가면서 (주황색/청록배경) 그다음 all kids~ 
-  https://codepen.io/sulee79/pen/EBKbqE
-  https://codepen.io/KACTOPKA/pen/qBMeKeQ
-  https://codepen.io/squrler/pen/WbXxjx
 extends layout_kor.pug 
 block variables 
   -var menuType = "intro"
 
 block div
-  //script(src='', type='text/javascript')
-  //link(href='', rel='stylesheet')
-  a(href="intro2.html").introWrap
-    p#logo LaCalS
-    p#message
-  style.
-      @import url('https://fonts.cdnfonts.com/css/for-the-love-of-hate');
-      body * {font-family: 'For the love of hate'!important;}
-      .introWrap { 
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        background-color: #43564A; 
-        cursor: pointer;
-      }
+    section.intro
+        a.introButton(href="whatWeDo.html")
+            img(src="./images/cardButton1.png", alt="LaCalS")
+            div.introButtonOverlay
+                |LaCalS 
+                i.fas.fa-arrow-right.introButtonArrow
+        a.introButton(href="regular.html")
+            img(src="./images/tempImage8.jpeg", alt="Signatures")
+            div.introButtonOverlay
+                |Signatures 
+                i.fas.fa-arrow-right.introButtonArrow
+        a.introButton(href="location.html")
+            img(src="./images/cardButton2.png", alt="Contact Us")
+            div.introButtonOverlay
+                |Contact Us 
+                i.fas.fa-arrow-right.introButtonArrow
+    style.
+        .intro {display: flex; flex-wrap: wrap; height: 100vh;}
+        .intro .introButton {flex: 1; position: relative; height: 100%; overflow: hidden; min-width: 360px;}
+        .intro .introButton img {width: 100%; height: 100%; object-fit: cover; transition: all 1s ease;}
+        .intro .introButton .introButtonOverlay {position: absolute; top: 0; left: 0; right: 0; bottom: 0; color: white; font-size: 4rem; font-weight: bold; background-color: rgba(67, 86, 74, 0.9); 
+        display: flex; align-items: center; justify-content: center;}
+        .introButtonArrow {margin-left: 1rem;}
 
-      #logo {
-          font-size: 64px;
-          color: #ed751c;
-          font-weight: bold;
-          position: absolute;
-          transition: top 3s ease-out, opacity 3s ease-out;
-          top: 50%;
-          transform: translateY(-50%);
-          opacity: 1;
-      }
-   
-      #logo.fade-up {
-          top: -25%; /* 화면 위쪽으로 더 멀리 이동 */
-          opacity: 0;
-      }
-
-      #message {
-        font-size: 44px;
-        color: white;
-        font-weight: bold;
-        opacity: 0;
-        position: absolute;
-        top: 50%;
-        transition: opacity 1s;
-      }
-
-      #message.show-message {
-        opacity: 1;
-      }
-     @keyframes fadeUpAnimation {
-        0% {opacity: 1;}
-        100% {opacity: 0;}
-      }
-  script.
-    function showText(target, message, index, interval) {
-        if (index < message.length) {
-            document.querySelector(target).textContent += message[index++];
-            setTimeout(function() { showText(target, message, index, interval); }, interval);
+        /*보더 효과*/
+        .intro {gap: 1px;}
+        
+        /*마우스오버 효과*/
+        .introButton:hover img {transform: scale(1.1);}
+        .introButton:hover .introButtonOverlay {background-color:rgba(0,0,0,0); transform: translateY(-10px); transition: all 1s;}
+        
+       @media (max-width: 1199.98px) {
+            .intro {flex-direction: column;}
+            .intro .introButton img {object-fit: cover; object-position: 40% 40%;}
         }
-    }
-
-    window.addEventListener('load', () => {
-      setTimeout(() => {
-        document.querySelector('#logo').classList.add('fade-up');
-        setTimeout(() => {
-          document.querySelector('#message').classList.add('show-message');
-          showText("#message", "All kids have their own stage to PLAY!", 0, 100);
-        }, 1000);
-      }, 1000);
-    });
