--- a/layout_kor.pug
+++ b/layout_kor.pug
@@ -8,7 +8,7 @@ html(lang='ko')
     meta(name='author', content='')
     title LaCalS
     // Favicon
-    link(rel='icon', type='image/x-icon', href='favicon2.png')
+    link(rel='icon', type='image/x-icon', href='favicon.png')
     // Bootstrap core CSS
     link(href='./vendor/bootstrap/css/bootstrap.min.css', rel='stylesheet')
     // fontawesome
@@ -20,94 +20,51 @@ html(lang='ko')
     // Bootstrap core JavaScript
     script(src='./vendor/jquery/jquery.min.js', type='text/javascript')
     script(src='./vendor/bootstrap/js/bootstrap.bundle.min.js', type='text/javascript')
-    // Chart.js
-    script(src='./js/chart/Chart.js', type='text/javascript')
-    script(src='./js/chart/chartjs-plugin-datalabels.js', type='text/javascript')
-    script(src='./js/chart/chartjs-plugin-piechart-outlabels.js', type='text/javascript')
-    script(src='./js/chart/chartjs-plugin-annotation.js', type='text/javascript')
-    script(src='./js/chart/defaultChart.js', type='text/javascript')
     // Custom script for this template
     script(src='./js/ui.js', type='text/javascript')
     script(src='./js/responsiveCSS.js', type='text/javascript')
   body
-    a.blind(href="#content") 본문 바로가기
+    a#skipAccesibility.sr-only.sr-only-focusable(href="#content") 본문 바로가기
     if menuType == 'intro'
       //아무것도 없음
+      block div
     else
-      // Navigation Q. https://mpyc.kr/kr/ 및 메뉴명
+      // Navigation
       nav#gnb.gnb.navbar.navbar-light.navbar-expand-md.fixed-top
-        .container-fluid
-          a.gnbLogo.navbar-brand(href="#")
+        div.container-fluid
+          a.gnbLogo.navbar-brand(href="main.html")
             img(src="./images/logo.png", alt="로고")
-          button.navbar-toggler(type="button", data-toggle="collapse", data-target="#gnbInner", aria-controls="gnbInner", aria-expanded="false", aria-label="Toggle navigation")
+          button.navbar-toggler(type="button", data-toggle="collapse", data-target="#gnbInner", aria-controls="gnbInner", aria-expanded="false", aria-label="menu toggle navigation")
             span.navbar-toggler-icon
-          #gnbInner.gnbInner.collapse.navbar-collapse
+          div#gnbInner.gnbInner.collapse.navbar-collapse
             ul#gnbMenu.gnbMenu.navbar-nav
               li.nav-item.dropdown
-                a#dropdown1.nav-link.dropdown-toggle(href="whatwedo.html", data-toggle="dropdown", aria-expanded="false") LaCals
-                .dropdown-menu(aria-labelledby="dropdown1")
+                a#dropdown1.nav-link.dropdown-toggle(href="#", data-toggle="dropdown", aria-expanded="false") LaCalS
+                div.dropdown-menu(aria-labelledby="dropdown1")
                   a.dropdown-item(href="whatwedo.html") What We Do
                   a.dropdown-item(href="whoweare.html") Who We Are
               li.nav-item.dropdown
-                a#dropdown2.nav-link.dropdown-toggle(href="regular.html", data-toggle="dropdown", aria-expanded="false") Signatures
-                .dropdown-menu(aria-labelledby="dropdown2")
+                a#dropdown2.nav-link.dropdown-toggle(href="#", data-toggle="dropdown", aria-expanded="false") Signatures
+                div.dropdown-menu(aria-labelledby="dropdown2")
                   a.dropdown-item(href="regular.html") Regular
                   a.dropdown-item(href="theme.html") Theme
               li.nav-item.dropdown
-                a#dropdown3.nav-link.dropdown-toggle(href="moreinformation.html", data-toggle="dropdown", aria-expanded="false") Contact Us
-                .dropdown-menu(aria-labelledby="dropdown3")
-                  a.dropdown-item(href="moreinformation.html") More Information
+                a#dropdown3.nav-link.dropdown-toggle(href="#", data-toggle="dropdown", aria-expanded="false") Contact Us
+                div.dropdown-menu(aria-labelledby="dropdown3")
                   a.dropdown-item(href="location.html") Location
-          ul#gnbSub.gnbSub.navbar-nav
+          ul#gnbSub.gnbSub.navbar-nav.d-none.d-md-flex
             li.nav-item 
               a.nav-link(href="https://www.facebook.com/" target="_blank")
-                i.iconFacebook.fab.fa-facebook-square
+                i.iconYoutube.fab.fa-youtube-square
             li.nav-item 
               a.nav-link(href="https://www.instagram.com/" target="_blank")
                 i.iconInstagram.fab.fa-instagram-square
-      //-페이지를 보는 사람들마다 모두 다른 모니터에서 볼 것이기 때문에 모두에게 같은 색상을 보여주는건 애초에 불가능합니다. 
-       뭔가 기준을 정하고 거기에서 잘 보이면 오케이라는 식으로 하셔야죠. 그 기준을 잡는 방법이 여럿 있는데 모니터 캘리브레이션이 그중 하나입니다. 
-       캘리브레이션이 잘 된 모니터에서 의도한 대로 보이면, 캘리브레이션이 안 된 모니터에서 엉뚱하게 보여도 어쩔 수 없는거죠.
-       윈도우와 맥이라서 다르게 보이는게 아닙니다. 윗분 말씀대로 모니터가 달라서 그런듯 보입니다. 
-       그리고 맥이라면 p3 색상 지원일 텐데 보통 회사에서 지급해주는 윈도우 모니터는 젤 싸구려라 srgb색상도 100퍼센트 지원 안되는경우가 많아요.
       if menuType == 'main'
-        //-https://mpyc.kr/kr/sub/concert/guide.php=
         block div
       else
         block div
       footer.footer 
         .container-fluid.footerInner 
-          p.footerLogo LacalS
+          p.footerLogo LaCalS
           p.footerAddress 서울특별시 강남구 선릉로8길 9 1층
           p.footerRight Copyright&copy; LaCalS. All rights reserved.
-
-style.
-    .navbar {
-    font-size: 22px;
-    color:#333;
-    transition: background-color 0.3s ease;
-    }
-
-    .navbar-nav .nav-item {
-        margin-right: 20px; /* Adjust the right margin */
-        margin-left: 20px; /* Adjust the left margin */
-    }
-    .navbar-nav .nav-link {color:#333;}
-    .navbar-nav .nav-link i {font-size:33px; margin-left: 10px;}
-    #navbarNav .navbar-nav a {font-size:24px; color:#333;}
-    .dropdown-menu {font-size:22px;}
-    .navbar.scrolled {
-    background-color: rgba(256, 256, 256, 0.9) !important;
-    }
-script. 
-    document.addEventListener('DOMContentLoaded', function() {
-    var navbar = document.querySelector('.navbar');
-    
-    window.addEventListener('scroll', function() {
-        if (window.scrollY > 50) {
-        navbar.classList.add('scrolled');
-        } else {
-        navbar.classList.remove('scrolled');
-        }
-    });
-    });
