--- a/whoweare.pug
+++ b/whoweare.pug
@@ -6,153 +6,197 @@ block div
     section.jumbotron.jumbotronBg1 
         div.container
             p.jumbotronLead LaCalS
-    section 
-        div#wrapper 
-            div#content
-                div.profile.profileTheme1
-                    div.profileImage
-                        img(src="../images/profileImage1.png")
-                    div.profileText
-                        div.profileIntro "글로벌 인재를 키우는 대표원장 Jamie입니다"
-                        div.profileName 
-                            b 대표원장
-                            |Jamie
-                        div.profileTags 
-                            span #글로벌 인재 
-                            span #자연스러운 언어노출 환경
-                            span #자신감
-                            span #편안한 마음
-                        div.profileContent
-                            h5.profileContentTitle 학력 및 연구활동
-                            ul.profileContentList
-                                li Cotter Schools(MN, USA) 고등학교 졸업
-                                li The University of iowa(IA, USA) 학사 졸업
-                                    ul
-                                        li Pre-medicine Track
-                                        li Glocal Health 세부전공
-                                        li 국제 아동보건 주제 졸업논문
-                                        li 중남미 교환학생(콜롬비아)
-                                li 서울대학교 보건대학원 석사 졸업
-                                    ul 
-                                        li 질적방법 연구
-                                        li 연구 발표, 논문 수상 다수 
-                                        li 국내아동 신체활동 주제 졸업논문•국제보건 연구활동
-                            h5.profileContentTitle 커리어 이력
-                            ul.profileContentList 
-                                li 미국 아동권리단체 보건전문가 근무
-                                    ul 
-                                        li Daycare 담임교사 겸직
-                                li 외교부 주니어/인턴 파견 근무
-                                    ul 
-                                        li 볼리비아 PAHO/WHO
-                                        li 국제아동기구 아동보건 프로젝트
-                                        li 국제보건 관련 공공기관 근무
-                                        li 국제보건의료 교육사업 6년
-                                            br
-                                            |–사업발굴, 기획, 운영관리, 평가 등
-                            h5.profileContentTitle 자격증 등 기타사항
-                            ul.profileContentList 
-                                li 보유 자격
+    section#content.container-fluid
+        div.profile.profileTheme1
+            div.profileImage
+                img(src="./images/profileImage1.png")
+            div.profileText
+                div.profileIntro "글로벌 인재를 키우는 대표원장 Jamie입니다"
+                div.profileName 
+                    b 대표원장
+                    |Jamie
+                div.profileTags 
+                    span #글로벌 인재 
+                    span #자연스러운 언어노출 환경
+                    span #자신감
+                    span #편안한 마음
+                div.profileContent
+                    h5.profileContentTitle 학력 및 연구활동
+                    ul.profileContentList
+                        li Cotter Schools(MN, USA) 고등학교 졸업
+                        li The University of iowa(IA, USA) 학사 졸업
+                            ul
+                                li Pre-medicine Track
+                                li Glocal Health 세부전공
+                                li 국제 아동보건 주제 졸업논문
+                                li 중남미 교환학생(콜롬비아)
+                        li 서울대학교 보건대학원 석사 졸업
+                            ul 
+                                li 질적방법 연구
+                                li 연구 발표, 논문 수상 다수 
+                                li 국내아동 신체활동 주제 졸업논문•국제보건 연구활동
+                    h5.profileContentTitle 커리어 이력
+                    ul.profileContentList 
+                        li 미국 아동권리단체 보건전문가 근무
+                            ul 
+                                li Daycare 담임교사 겸직
+                        li 외교부 주니어/인턴 파견 근무
+                            ul 
+                                li 볼리비아 PAHO/WHO
+                                li 국제아동기구 아동보건 프로젝트
+                                li 국제보건 관련 공공기관 근무
+                                li 국제보건의료 교육사업 6년
                                     br
-                                    | Tesol, 하브루타지도사1급, 영어 스토리텔링지도사, 방과후영어강사
-                                li 한국어, 영어, 스페인어 구사
-                                li 거주지 포함 32개국 교류
-                div.profile.profileTheme2
-                    div.profileImage
-                        img(src="../images/tempImage13.png")
-                    div.profileText
-                        div.profileName 
-                            b 원장
-                            |Stellar
-                        div.profileIntro
-                            |안녕하세요! 아동병원과 정신건강의학과에서 간호사로 일하며 아동의 건강한 삶을 연구하고자 보건학을 전공하고 연구원으로 근무했어요. 
+                                    |–사업발굴, 기획, 운영관리, 평가 등
+                    h5.profileContentTitle 자격증 등 기타사항
+                    ul.profileContentList 
+                        li 보유 자격
                             br
-                            |아동 발달 전문가이자, 아이의 엄마로 늘 어린이의 발달과 성장을 지켜봐왔답니다. 
+                            | Tesol, 하브루타지도사1급, 영어 스토리텔링지도사, 방과후영어강사
+                        li 한국어, 영어, 스페인어 구사
+                        li 거주지 포함 32개국 교류
+        div.profile.profileTheme2
+            div.profileImage
+                img(src="./images/profileImage2.png")
+            div.profileText
+                div.profileName 
+                    b 원장
+                    |스텔라
+                div.profileIntro
+                    |안녕하세요! 
+                    br
+                    |아동병원과 정신건강의학과에서 간호사로 일하며 아동의 건강한 삶을 연구하고자 보건학을 전공하고 연구원으로 근무했어요. 
+                    br
+                    |아동 발달 전문가이자, 아이의 엄마로 늘 어린이의 발달과 성장을 지켜봐왔답니다. 
+                    br
+                    |LaCalS에서 아이들의 건강한 발달과 정서 지능을 함양시켜주는 선생님으로 아이들의 호기심과 창의성을 이끌고 싶어요!
+                div.profileContent
+                    h5.profileContentTitle 커리어 이력
+                    ul.profileContentList
+                        li 아동병원 간호사
+                        li 정신건강의학과 간호사
+                        li 연구원 출신 엄마
+                        li 신생아돌봄, 하브루타 인기 강사
+                    h5.profileContentTitle 학력사항
+                    ul.profileContentList
+                        li 가톨릭대학교 간호대학 학사 졸업
+                        li 서울대학교 보건대학원 석사 졸업
                             br
-                            |LaCalS에서 아이들의 건강한 발달과 정서 지능을 함양시켜주는 선생님으로 아이들의 호기심과 창의성을 이끌고 싶어요!
-                        div.profileContent
-                            h5.profileContentTitle 커리어 이력
-                            ul.profileContentList
-                                li 아동병원 간호사
-                                li 정신건강의학과 간호사
-                                li 연구원 출신 엄마
-                                li 신생아돌봄, 하브루타 인기 강사
-                            h5.profileContentTitle 학력사항
-                            ul.profileContentList
-                                li 가톨릭대학교 간호대학 학사 졸업
-                                li 서울대학교 보건대학원 석사 졸업
-                                    br
-                                    |아동, 여성 관련 연구 다수
-                            h5.profileContentTitle 자격증
-                            ul.profileContentList
-                                li 아동발달지도사
-                                li 하브루타지도사 1급
-                div.profile.profileTheme3
-                    div.profileImage
-                        img(src="../images/tempImage13.png")
-                    div.profileName 
-                        b 원장
-                        |Stellar
-                    div.profileIntro
-                        |안녕하세요! 아동병원과 정신건강의학과에서 간호사로 일하며 아동의 건강한 삶을 연구하고자 보건학을 전공하고 연구원으로 근무했어요. 
-                        br
-                        |아동 발달 전문가이자, 아이의 엄마로 늘 어린이의 발달과 성장을 지켜봐왔답니다. 
-                        br
-                        |LaCalS에서 아이들의 건강한 발달과 정서 지능을 함양시켜주는 선생님으로 아이들의 호기심과 창의성을 이끌고 싶어요!
-                    div.profileContent
-                        h5.profileContentTitle 커리어 이력
-                        ul.profileContentList
-                            li 아동병원 간호사
-                            li 정신건강의학과 간호사
-                            li 연구원 출신 엄마
-                            li 신생아돌봄, 하브루타 인기 강사
-                        h5.profileContentTitle 학력사항
-                        ul.profileContentList
-                            li 가톨릭대학교 간호대학 학사 졸업
-                            li 서울대학교 보건대학원 석사 졸업
-                                br
-                                |아동, 여성 관련 연구 다수
-                        h5.profileContentTitle 자격증
-                        ul.profileContentList
-                            li 아동발달지도사
-                            li 하브루타지도사 1급
-                div.profile.profileTheme1(style={'margin-top':'12rem'})
-                    div.profileImage.temp
-                        img(src="../images/tempImage14.png")
-                    div.profileText
-                        div.profileIntro(style={'margin-bottom':'2rem'}) 
-                            |"영국에서 온 
-                            b 연극 연출가 Dury
-                            | 입니다"
-                        div.profileContent.temp
-                            h5.profileContentTitle 커리어 이력
-                            ul.profileContentList
-                                li Cambridge School of Visual and performing Arts, Cambrige,UK Foundation Degree
-                                li Goldsmiths, University of London Fondation Degree & Undergraduate Degree in Art
-                            h5.profileContentTitle 학력사항
-                            ul.profileContentList 
-                                li '또 다른' 대표/연출
-                                li 극단 '학전' 기획 및 운영
-                                li 창조학당 '키즈 런던 캠프' 기획 및 운영 영어영극 대표강사
-                                li 프리랜서 통•번역가
-                                li 유명 공연기획사 소속 조연출
-                    div.profileGallery
-                        h5.profileGalleryTitle 포트폴리오
-                        ul.profileGalleryContent
-                            li 
-                                img(src="https://img.youtube.com/vi/pQTXVXTtZ8E/maxresdefault.jpg")
-                            li 
-                                img(src="https://img.youtube.com/vi/gPtNGd24RNo/maxresdefault.jpg")
-                            li 
-                                img(src="https://img.youtube.com/vi/YWqSqLstpuM/maxresdefault.jpg")
-                            li 
-                                img(src="https://img.youtube.com/vi/4GQ3quyeFc8/maxresdefault.jpg")
-                            li 
-                                img(src="https://img.youtube.com/vi/MgjthjKS1j0/maxresdefault.jpg")
-                            li 
-                                img(src="https://img.youtube.com/vi/hQj9A9gkN2M/maxresdefault.jpg")
-                            li 
-                                img(src="https://img.youtube.com/vi/JrRZwHmEh9o/maxresdefault.jpg")
-                            li 
-                                img(src="https://img.youtube.com/vi/RGv-l0tMMx8/maxresdefault.jpg")
+                            |아동, 여성 관련 연구 다수
+                    h5.profileContentTitle 자격증
+                    ul.profileContentList
+                        li 아동발달지도사
+                        li 하브루타지도사 1급
+        div.profile.profileTheme3
+            div.profileImage
+                img(src="./images/profileImage3.png")
+            div.profileText
+                div.profileIntro 
+                    |"영국에서 온 
+                    b.highlight 연극 연출가 Dury
+                    | 입니다"
+                div.profileContent
+                    h5.profileContentTitle 커리어 이력
+                    ul.profileContentList
+                        li Cambridge School of Visual and performing Arts, Cambrige,UK Foundation Degree
+                        li Goldsmiths, University of London Fondation Degree & Undergraduate Degree in Art
+                    h5.profileContentTitle 학력사항
+                    ul.profileContentList 
+                        li '또 다른' 대표/연출
+                        li 극단 '학전' 기획 및 운영
+                        li 창조학당 '키즈 런던 캠프' 기획 및 운영 영어영극 대표강사
+                        li 프리랜서 통•번역가
+                        li 유명 공연기획사 소속 조연출
+            //-div.profileGallery
+                h5.profileGalleryTitle 포트폴리오
+                ul.profileGalleryContent
+                    li 
+                        img(src="https://img.youtube.com/vi/pQTXVXTtZ8E/maxresdefault.jpg")
+                    li 
+                        img(src="https://img.youtube.com/vi/gPtNGd24RNo/maxresdefault.jpg")
+                    li 
+                        img(src="https://img.youtube.com/vi/YWqSqLstpuM/maxresdefault.jpg")
+                    li 
+                        img(src="https://img.youtube.com/vi/4GQ3quyeFc8/maxresdefault.jpg")
+                    li 
+                        img(src="https://img.youtube.com/vi/MgjthjKS1j0/maxresdefault.jpg")
+                    li 
+                        img(src="https://img.youtube.com/vi/hQj9A9gkN2M/maxresdefault.jpg")
+                    li 
+                        img(src="https://img.youtube.com/vi/JrRZwHmEh9o/maxresdefault.jpg")
+                    li 
+                        img(src="https://img.youtube.com/vi/RGv-l0tMMx8/maxresdefault.jpg")
     style.
+        .container-fluid {margin-top: 4rem;}
+        .profile {display: flex; gap: 10rem; justify-content: space-between; margin-bottom:15rem;}
+        .profileImage {width: 20%; min-width: 34rem; max-width: 38rem;}
+        .profileImage img {width: 100%; border-radius: 2rem;}
+        .profileText {width: 80%;}
+        .profileIntro {font-size: 3.8rem; font-family: 'RixXladywatermelonR'; margin-bottom: 7rem;}
+        .profileName {font-size: 2.8rem; margin-bottom: 1.8rem; color: #1d1d1f;}
+        .profileName b {margin-right: 1rem;}
+        .profileTags {margin-bottom: 6rem;}
+        .profileTags > span {padding: 0.5rem 1rem; font-size: 1.4rem; border-radius: 2rem; margin-right: 0.8rem; box-sizing: border-box; background-color: #1d1d1f; color:#fff;}
+
+        .profileContent {}
+        .profileContentTitle {font-size:2.4rem; font-weight: 600; color: #333; margin-bottom: 1rem;}
+        .profileContentList {font-size: 2.2rem; margin-bottom: 2.4rem;}
+        .profileContentList > li {padding-left: 2rem;}
+        .profileContentList > li > li {padding-left: 1.2rem; font-size: 1.8rem; color: #333;}
+
+        .profileTheme1 .profileIntro {font-size: 4.2rem; margin-top: 4rem; font-family: 'SDMisaeng'; font-style: italic;}
+        .profileTheme2 .profileIntro {font-size: 2.6rem;}
+
+        /*불렛 효과*/
+        .profileContentTitle {position: relative; padding-left: 0rem;}
+        .profileContentTitle:after {position: absolute; content:''; width: 1.2rem; height: 1.2rem; border-radius: 50%; background-color:#f15c22; left: -2.3rem; top: 0.7rem;}
+       /*.profileContentList {position: relative; padding-left: 4rem;}
+        .profileContentList:after {position:absolute; content:''; width:0.2rem; height:calc(100% + 6rem); top: -2rem; left: -1.8rem; background-color:#f15c22;}
+        .profileContentList:last-child:after {height: calc(100% + 2rem);}*/
+        /*사용안함
+        .profileTheme2 {flex-direction: column; align-items: center; justify-content: center; gap: 0;}
+        .profileTheme2 .profileIntro {font-size:2.6rem; text-align: center;}*/
+        
+        /*
+        .profileGallery {width: 100%;
+            &Title {font-size: 2.4rem; font-weight: 600; color:#333; margin-bottom: 1rem;}
+            &Content {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: repeat(4, 10vw);
+            grid-gap: 15px;
+            li {
+                img {width: 100%; height: 100%; object-fit: cover;}
+            }
+            li:nth-child(1) {
+                grid-column-start: 1;
+                grid-column-end: 3;
+                grid-row-start: 1;
+                grid-row-end: 3;
+            }
+            li:nth-child(2) {
+                grid-column-start: 3;
+                grid-column-end: 4;
+                grid-row-start: 1;
+                grid-row-end: 2;
+            }
+            li:nth-child(3) {
+                grid-column-start: 4;
+                grid-column-end: 5;
+                grid-row-start: 1;
+                grid-row-end: 3;
+            }
+            }
+        }
+        }
+        */
+
+        @media (max-width: 1199.98px) {
+            .profile {flex-direction: column; gap: 0; text-align: center;}
+            .profileImage {width: 100%; padding:0; margin: 0 auto;}
+            .profileText {width: 100%;}
+            .profileContent {padding-left: 4rem; text-align: left;}
+
+            .profileTheme1 .profileIntro {margin-top: 1rem; margin-bottom: 2rem;}
+            
+        }
